Wed Mar 30 19:32:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

	* tao/Strategies/uiop_endpoints.pidl:
	* tao/Strategies/sciop_endpoints.pidl:
	  Updated regeneration instructions

	* tao/Strategies/sciop_endpoints.{h,cpp,i}:
	* tao/Strategies/uiop_endpoints.{h,cpp,i}:
	  Removed these generated files, replaced with the new files below

	* tao/Strategies/sciop_endpointsC.{h,cpp,inl}:
	* tao/Strategies/uiop_endpointsC.{h,cpp,inl}:
	  New generated files

	* tao/Makefile.am:
	  Updated for changes above

Wed Mar 30 11:18:18 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* tao/Enum_TypeCode.inl:
	* tao/Struct_TypeCode.inl:
	* tao/TypeCode_Base_Attributes.inl:
	* tao/Union_TypeCode.inl:
	* tao/Value_TypeCode.inl:

	  Full member specializations must be preceeded by a "template<>"
	  declaration.  Addresses build warnings exhibited by HP aC++.

Wed Mar 30 19:07:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

	* orbsvcs/orbsvcs/HTIOP/htiop_endpointsC.{h,cpp,inl}:
	  Regenerated

	* orbsvcs/orbsvcs/HTIOP/htiop_endpoints.pidl:
	  Added -Sc to suppries the Tie files, we don't need them

Wed Mar 30 19:01:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

	* orbsvcs/orbsvcs/IFRService/*S.cpp:
	  Regenerated

Wed Mar 30 18:52:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

	* tao/IFR_Client/IFR_BaseS.h:
	  Removed not needed include of inl file

Wed Mar 30 10:45:39 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* TAO_IDL/be/be_visitor_typecode/struct_typecode.cpp
	  (visit_structure):
	* TAO_IDL/be/be_visitor_typecode/value_typecode.cpp
	  (visit_members):

	  Generate a field array with "const" elements.  They should
	  be immutable.

Wed Mar 30 18:43:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

	* docs/libraries.html:
	  Documented the new ImR_Client library

Wed Mar 30 10:38:07 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* TAO_IDL/be/be_visitor_typecode/value_typecode.cpp
	  (visit_valuetype, visit_members):
