@@ -53,13 +53,6 @@
 #endif
 #define TAO_EXPORT_MACRO TAO_Strategies_Export
 
-#if defined (TAO_EXPORT_NESTED_CLASSES)
-#  if defined (TAO_EXPORT_NESTED_MACRO)
-#    undef TAO_EXPORT_NESTED_MACRO
-#  endif /* defined (TAO_EXPORT_NESTED_MACRO) */
-#  define TAO_EXPORT_NESTED_MACRO TAO_Strategies_Export
-#endif /* TAO_EXPORT_NESTED_CLASSES */
-
 #if defined(_MSC_VER)
 #pragma warning(push)
 #pragma warning(disable:4250)
@@ -205,7 +198,7 @@ TAO_Strategies_Export CORBA::Boolean operator>> (
 #endif /* _TAO_CDR_OP_TAO_UIOPEndpointSequence_H_ */
 
 // TAO_IDL - Generated from
-// be\be_codegen.cpp:969
+// be\be_codegen.cpp:958
 
 #if defined (__ACE_INLINE__)
 #include "uiop_endpointsC.inl"
